--- a/ms-departure/src/main/resources/messages.properties
+++ b/ms-departure/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 no.such.departure.code=NOT_FOUND
-no.such.departure.message=Departure with id = %d not found!
+no.such.departure.message=Departure with id = {0} not found!
